--- a/call4papers.html
+++ b/call4papers.html
@@ -51,9 +51,9 @@
 
 				<div class="logo">
 					<img src="pictures/ISCBD2017-logo.png" style="width: 247px; margin-top: 0px;">
-					<div style="font-size: 1.6em;">October 15, 2017</div>
-					<p style="margin: 20px 10px 0px; font-size: 1.1em;">2nd International Workshop on Internet-scale Clouds and Big Data (ISCBD)</p>
-					<p style="margin: 40px 10px 0px 0px; font-size: 1.1em;">San Jose, California, USA</p>
+					<div style="font-size: 1.6em;">October 18 - 20, 2017</div>
+					<p style="margin: 20px 10px 0px; font-size: 1.1em;">3rd International Workshop on Internet-scale Clouds and Big Data (ISCBD)</p>
+					<p style="margin: 40px 10px 0px 0px; font-size: 1.1em;">Philadelphia, Pennsylvania, USA</p>
 				</div>
 				<div id="slideshow"><span class="STYLE8"></span>
                   			<ul class="slideshow">
@@ -88,11 +88,11 @@
        <div><h2>Call For Papers</h2></div>
 
 	  
-      <p>The ISCBD 2016 workshop is scheduled on October 31, 2016 and will be held at Pittsburgh, PA, USA. It is collocated with <a href="http://ieee-cic.org/">IEEE CIC conference</a>.</p>
+      <p>The ISCBD 2018 workshop is scheduled on October 18 - 20, 2018 and will be held at San Jose, California, USA. It is collocated with <a href="http://ieee-cic.org/">IEEE CIC conference</a>.</p>
 
       <p>Internet-scale data provide the next generation computing and data analysis platforms for many emerging services, such as tele-work, e-government, and business solutions to millions of individuals distributed across the Internet and host tens of thousands of servers. Many small and medium enterprises (SME) have great potential to benefit the economic incentives when using aforementioned internet-scale cloud computing and Big Data platforms for their business applications. However, there are challenges associated with every new technology.</p>
 	  <p>Interoperability, communication, performance, and security are the four major critical issues that need to be addressed when applications are deployed in internet-scale. Same is the case for the internet-scale cloud platforms that would manage large number of shared and disparate services. Various quality requirements, such as availability, security, economic cost, energy efficiency, and so forth determine the quality of service of internet-scale cloud applications and platforms.</p>
-	   <p>ISCBD 2016  brings together researchers and practitioners from around the world to share their experiences on the challenges and problems faced in applications deployed in internet-scale cloud and Big Data applications. This event will define protocols and standards that need to be set in place for improving cloud and Big Data computing technologies and making cloud a new and attractive paradigm for various applications.</p>
+	   <p>ISCBD 2018  brings together researchers and practitioners from around the world to share their experiences on the challenges and problems faced in applications deployed in internet-scale cloud and Big Data applications. This event will define protocols and standards that need to be set in place for improving cloud and Big Data computing technologies and making cloud a new and attractive paradigm for various applications.</p>
 
       <p>The topics of interest include, but are by no means limited
       to:</p>
