--- a/submission.html
+++ b/submission.html
@@ -3,7 +3,7 @@
 <!-- Mirrored from www.csc.lsu.edu/~qywang/iScaleCloud2015/submission.htm by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 25 May 2016 15:15:15 GMT -->
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"><!-- base href="http://www.csc.lsu.edu/~qywang/iScaleCloud2015/index.htm" -->
-	<meta charset="UTF-8"><title>Submission | ISCBD 2017</title>
+	<meta charset="UTF-8"><title>Submission | ISCBD 2018</title>
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="pictures/jquery.css">
@@ -51,9 +51,9 @@
 
 				<div class="logo">
 					<img src="pictures/ISCBD2017-logo.png" style="width: 247px; margin-top: 0px;">
-					<div style="font-size: 1.6em;">October 15, 2017</div>
-					<p style="margin: 20px 10px 0px; font-size: 1.1em;">2nd International Workshop on Internet-scale Clouds and Big Data (ISCBD)</p>
-					<p style="margin: 40px 10px 0px 0px; font-size: 1.1em;">San Jose, California, USA</p>
+					<div style="font-size: 1.6em;">October 18 - 20, 2018</div>
+					<p style="margin: 20px 10px 0px; font-size: 1.1em;">3rd International Workshop on Internet-scale Clouds and Big Data (ISCBD)</p>
+					<p style="margin: 40px 10px 0px 0px; font-size: 1.1em;">Philadelphia, Pennsylvania, USA</p>
 				</div>
 				<div id="slideshow"><span class="STYLE8"></span>
                   			<ul class="slideshow">
@@ -95,7 +95,7 @@ All short papers must not be more than 3 pages long, with the formatting same as
 
 All papers are refereed through a single blind process and should be submitted online.</p>
 
-<p><a href=" https://easychair.org/my/conference.cgi?a=12752759;conf=iscbd2017"> https://easychair.org/my/conference.cgi?a=12752759;conf=iscbd2017</a></p>
+<p><a href="https://easychair.org/conferences/?conf=iscbd2018"> https://easychair.org/conferences/?conf=iscbd2018.</a></p>
  
 <p>All submitted papers will be rigorously reviewed. All accepted papers will made available in IEEE Xplore and external indexing services (DBLP database, ZB1Math/CompuServe, IO-Port, EI, Scopus, INSPEC, ISI proceeding - pending approval).</p>
 
