--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@ $(document).ready(function(){
 			<div class="photo-pannel clearfix">
 
 				<div class="logo">
-					<img src="pictures/ISCBD2017-logo.png" style="width: 247px; margin-top: 0px;">
+				<div style="font-size: 3.2em;">ISCBD 2018</div>
+					<!--<img src="pictures/ISCBD2017-logo.png" style="width: 247px; margin-top: 0px;">-->
 					<div style="font-size: 1.6em;">October 18 - 20, 2018</div>
 					<p style="margin: 20px 10px 0px; font-size: 1.1em;">3rd International Workshop on Internet-scale Clouds and Big Data (ISCBD)</p>
 					<p style="margin: 40px 10px 0px 0px; font-size: 1.1em;">Philadelphia, Pennsylvania, USA</p>
