--- a/call4papers.html
+++ b/call4papers.html
@@ -50,7 +50,8 @@
 			<div class="photo-pannel clearfix">
 
 				<div class="logo">
-					<img src="pictures/ISCBD2017-logo.png" style="width: 247px; margin-top: 0px;">
+									<div style="font-size: 2.8em;">ISCBD 2018</div>
+				<p>
 					<div style="font-size: 1.6em;">October 18 - 20, 2017</div>
 					<p style="margin: 20px 10px 0px; font-size: 1.1em;">3rd International Workshop on Internet-scale Clouds and Big Data (ISCBD)</p>
 					<p style="margin: 40px 10px 0px 0px; font-size: 1.1em;">Philadelphia, Pennsylvania, USA</p>
