--- a/index.html
+++ b/index.html
@@ -270,6 +270,10 @@ All papers are refereed through a single blind process and should be submitted o
 Pittsburgh, PA, USA </p>
 		<p>Phone: 412.624.0232</p>
 	   <p> <a href="mailto:bpalan@pitt.edu">bpalan [AT] pitt [DOT] edu</a></p>
+	   		<p><strong>S D Madhu Kumar</strong></p>
+		<p>Department of Computer Science & Engineering, NIT Calicut, India </p>
+		<p>Phone: 0495 2286806</p>
+	   <p> <a href="mailto:madhu@nitc.ac.in">madhu [AT] nitc [DOT] ac [DOT] in</a></p>
 	   <p><strong>Jinlai Xu (Web Master)</strong></p>
 	   	<p>School of Computing and Information, University of Pittsburgh 
 Pittsburgh, PA, USA </p>
