--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ $(document).ready(function(){
 
 			<li class="ui-li ui-li-divider ui-bar-a ui-corner-top" role="heading" data-role="list-divider"><strong>Important dates</strong></li>
 			<li class="ui-li ui-li-static ui-btn-up-c">
-				<strong>Workshop: <font color="red">October 18 - 20, 2018</font></strong>
+				<strong>Workshop: <font color="red">October 18, 2018</font></strong>
 			</li>
 			<li class="ui-li ui-li-static ui-btn-up-c ui-corner-bottom ui-li-last">
 				<strong>Submission deadline:<font color="red"> August 1, 2018 </font></strong> 
@@ -208,7 +208,7 @@ $(document).ready(function(){
       <div><h2>WELCOME TO ISCBD 2018!</h2></div>
 
 	  
-      <p>The ISCBD 2018 workshop is scheduled on October 18 - 20, 2018 and will be held at Philadelphia, Pennsylvania, USA. It is collocated with <a href="http://ieee-cic.org/">IEEE CIC conference</a>.</p>
+      <p>The ISCBD 2018 workshop is scheduled on October 18, 2018 and will be held at Philadelphia, Pennsylvania, USA. It is collocated with <a href="http://ieee-cic.org/">IEEE CIC conference</a>.</p>
 
       <p>Internet-scale data provide the next generation computing and data analysis platforms for many emerging services, such as tele-work, e-government, and business solutions to millions of individuals distributed across the Internet and host tens of thousands of servers. Many small and medium enterprises (SME) have great potential to benefit the economic incentives when using aforementioned internet-scale cloud computing and Big Data platforms for their business applications. However, there are challenges associated with every new technology.</p>
 	  <p>Interoperability, communication, performance, and security are the four major critical issues that need to be addressed when applications are deployed in internet-scale. Same is the case for the internet-scale cloud platforms that would manage large number of shared and disparate services. Various quality requirements, such as availability, security, economic cost, energy efficiency, and so forth determine the quality of service of internet-scale cloud applications and platforms.</p>
@@ -257,7 +257,7 @@ All short papers must not be more than 3 pages long, with the formatting same as
 
 All papers are refereed through a single blind process and should be submitted online.</p>
 
-<p><a href="https://easychair.org/conferences/?conf=iscbd2018"> https://easychair.org/conferences/?conf=iscbd2018.</a></p>
+<p><a href="https://easychair.org/conferences/?conf=iscbd2018"> https://easychair.org/conferences/?conf=iscbd2018</a></p>
  
 <p>All submitted papers will be rigorously reviewed. All accepted papers will made available in IEEE Xplore and external indexing services (DBLP database, ZB1Math/CompuServe, IO-Port, EI, Scopus, INSPEC, ISI proceeding - pending approval).</p>
 
