--- a/submission.html
+++ b/submission.html
@@ -96,7 +96,7 @@ All short papers must not be more than 3 pages long, with the formatting same as
 
 All papers are refereed through a single blind process and should be submitted online.</p>
 
-<p><a href="https://easychair.org/conferences/?conf=iscbd2018"> https://easychair.org/conferences/?conf=iscbd2018.</a></p>
+<p><a href="https://easychair.org/conferences/?conf=iscbd2018"> https://easychair.org/conferences/?conf=iscbd2018</a></p>
  
 <p>All submitted papers will be rigorously reviewed. All accepted papers will made available in IEEE Xplore and external indexing services (DBLP database, ZB1Math/CompuServe, IO-Port, EI, Scopus, INSPEC, ISI proceeding - pending approval).</p>
 
