--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ $(document).ready(function(){
 				<div style="font-size: 2.8em;">ISCBD 2018</div>
 				<p>
 					<!--<img src="pictures/ISCBD2017-logo.png" style="width: 247px; margin-top: 0px;">-->
-					<div style="font-size: 1.6em;">October 18 - 20, 2018</div>
+					<div style="font-size: 1.6em;">October 18, 2018</div>
 					<p style="margin: 20px 10px 0px; font-size: 1.1em;">3rd International Workshop on Internet-scale Clouds and Big Data (ISCBD)</p>
 					<p style="margin: 40px 10px 0px 0px; font-size: 1.1em;">Philadelphia, Pennsylvania, USA</p>
 				</div>
