--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@ $(document).ready(function(){
 				<strong>Workshop: <font color="red">October 18, 2018</font></strong>
 			</li>
 			<li class="ui-li ui-li-static ui-btn-up-c ui-corner-bottom ui-li-last">
-				<strong>Submission deadline:<font color="red"> August 1, 2018 </font></strong> 
+				<strong>Submission deadline:<font color="red"> August 30, 2018 </font></strong> 
 			</li>
 			<li class="ui-li ui-li-static ui-btn-up-c">
-				<strong>Notification of acceptance:<font color="red"> August 30, 2018 </font></strong> 
+				<strong>Notification of acceptance:<font color="red"> September 14, 2018 </font></strong> 
 			</li>
 			<li class="ui-li ui-li-static ui-btn-up-c">
-				<strong>Camera-ready copy due: <font color="red"> September 7, 2018 </font></strong>
+				<strong>Camera-ready copy due: <font color="red"> September 21, 2018 </font></strong>
 			</li>
 			</ul>
 	</div>
@@ -351,7 +351,10 @@ function onClickMore() {
 				</li>
 				<li class="ui-li ui-li-static ui-btn-up-c">
 				<p><strong>Technical Program Committee </strong></p>
-				<p> TBD </p>
+				<p> Daniel de Angelis Cordeiro, Brazil</p>
+				<p>Farhana H. Zulkernine, Canada</p>
+				<p>Priya Chandran, India</p>
+				<p>Sreekrishnan Venkiteswaran, IBM </p>
 				</li>
 				
 
