--- a/index.html
+++ b/index.html
@@ -348,12 +348,16 @@ function onClickMore() {
 				<p><strong>Program Committee Chairs</strong></p>
 				<p>Balaji Palanisamy, University of Pittsburgh, USA </p>
 				<p>S.D. Madhu Kumar, National Institute of Technology, Calicut </p>
+				<p>Karuna Joshi, University of Maryland, Baltimore County, USA</p>
 				</li>
 				<li class="ui-li ui-li-static ui-btn-up-c">
 				<p><strong>Technical Program Committee </strong></p>
-				<p> Daniel de Angelis Cordeiro, Brazil</p>
-				<p>Farhana H. Zulkernine, Canada</p>
-				<p>Priya Chandran, India</p>
+				<p>Balaji Palanisamy, University of Pittsburgh, USA </p>
+				<p>S.D. Madhu Kumar, National Institute of Technology, Calicut </p>
+				<p>Karuna Joshi, University of Maryland, Baltimore County, USA</p>
+				<p> Daniel de Angelis Cordeiro,Universidade de São Paulo, Brazil</p>
+				<p>Farhana H. Zulkernine, Queen's University, Canada</p>
+				<p>Priya Chandran, National Institute of Technology Calicut, India</p>
 				<p>Sreekrishnan Venkiteswaran, IBM </p>
 				</li>
 				
