--- a/index.html
+++ b/index.html
@@ -347,13 +347,13 @@ function onClickMore() {
 				<li class="ui-li ui-li-static ui-btn-up-c">
 				<p><strong>Program Committee Chairs</strong></p>
 				<p>Balaji Palanisamy, University of Pittsburgh, USA </p>
-				<p>S.D. Madhu Kumar, National Institute of Technology, Calicut </p>
+				<p>S.D. Madhu Kumar, National Institute of Technology, Calicut, India </p>
 				<p>Karuna Joshi, University of Maryland, Baltimore County, USA</p>
 				</li>
 				<li class="ui-li ui-li-static ui-btn-up-c">
 				<p><strong>Technical Program Committee </strong></p>
 				<p>Balaji Palanisamy, University of Pittsburgh, USA </p>
-				<p>S.D. Madhu Kumar, National Institute of Technology, Calicut </p>
+				<p>S.D. Madhu Kumar, National Institute of Technology, Calicut, India </p>
 				<p>Karuna Joshi, University of Maryland, Baltimore County, USA</p>
 				<p> Daniel de Angelis Cordeiro,Universidade de São Paulo, Brazil</p>
 				<p>Farhana H. Zulkernine, Queen's University, Canada</p>
